--- a/prac-1/profile.html
+++ b/prac-1/profile.html
@@ -40,7 +40,7 @@
         <table border="5" >
         <tr>
             <td> Profile </td> 
-            <td> <img src="/prac-1/images/PassportPhoto1.jpg" height="100px" width="100px" > </td>   
+            <td> <img src="/images/PassportPhoto1.jpg" height="100px" width="100px" > </td>   
         </tr>
         <tr>
             <td> Student's Name   </td>  
@@ -76,3 +76,4 @@
     <p style="text-align: center;">© 2025 Charusat University | <a href="home.html">Go to Dashboard</a></p>
 </body>
 </html>
+
