--- a/prac-1/home.html
+++ b/prac-1/home.html
@@ -54,8 +54,9 @@
             <a href="result.html">Result</a>
         </nav>
     </header>
-    <img src="/prac-1/images/Charusat.jpeg" alt="Charusat Campus">
+    <img src="/images/Charusat.jpeg" alt="Charusat Campus">
 </body>
 </html>
+
 
 
